--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
                                     <h1>Stay Focused on</h1>
                                     <h2 class="code-color">Mission 2022</h2>
                                    </div>
-                                   <p>I have a lot of dreams in this 2022 that I want to fulfill.I have taken many initiatives to fulfill those dreams.In between one of the dreams is to become a web developer.The dream of becoming a web developer came to my mind because I always wanted to be able to bear my own expenses.</p>
-
+                                   <p>I have a lot of dreams in this 2022 that I want to fulfill.I have taken many initiatives to fulfill those dreams.In between one of the dreams is to become a web developer.The dream of becoming a web developer came to my mind because I always wanted to be able to bear my own expenses.</p> <br>
+                                   <br>
                                    <a class="link-butt" target="_blank" href="https://www.linkedin.com/feed/">Explore now</a>
        </div>
        <div class="half-place">
@@ -47,7 +47,19 @@
              <p>I have so many goals in my life.The funny thing is, my goals change with age, just as people's thinking changes.As a child, I dreamed of becoming a doctor like my parents.After all, my only goal now is to be a web developer.</p>
          </div>
      </div>
-
+   </section>
+   <section class="Dec-wi-li">
+        <div class="baby-div-1">
+            <img src="images/pictures/coding.png" alt="">
+        </div>
+        <div class="baby-div-2">
+            <h3 style="font-size: 50px;"> <span color="code-color">Devlop</span>  <br> Without Limits</h3>
+            <p>Most of the things in life we have a limit but we <br> 
+               should not have any limit to develop ourselves. <br>
+               We always need to develop ourselves by taking advantage <br>
+               of this opportunity.This will greatly reduce the battle of our lives.</p> <br>
+               <a class="link-butt" href="https://www.linkedin.com/feed/">Read The Documantation</a>
+        </div>
    </section>                               
        
 
